style (Article) : fix line breaks on articleText parapgraphs with white-space:pre-line on Article.css

--- a/src/pages/article/Article.css
+++ b/src/pages/article/Article.css
@@ -1,4 +1,4 @@
-p {
+.article-text {
     white-space: pre-line;
     line-break: anywhere;
 }
